--- a/client/user/user_styles.css
+++ b/client/user/user_styles.css
@@ -1,50 +1,49 @@
 /* Google Font Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins" , sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-    background-color: #f6f6f6;
+  background-color: #f6f6f6;
 }
-
-.sidebar{
+.sidebar {
   position: fixed;
   left: 8px;
   top: 15px;
   height: 94%;
   width: 78px;
-  background: #513E5C;
+  background: #513e5c;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
   border-radius: 18px;
 }
 
-.sidebar.open{
+.sidebar.open {
   width: 220px;
 }
 .sidebar .active-page {
   background-color: #8b7d77;
 }
 
-.sidebar .logo-details{
+.sidebar .logo-details {
   height: 60px;
   display: flex;
   align-items: center;
   position: relative;
 }
-.sidebar .logo-details .icon{
+.sidebar .logo-details .icon {
   opacity: 0;
   transition: all 0.5s ease;
   height: 45px;
   margin-top: 8px;
   width: 45px;
 }
-.sidebar .logo-details .logo_name{
+.sidebar .logo-details .logo_name {
   color: #fff;
   font-size: 20px;
   font-weight: 600;
@@ -52,10 +51,10 @@ body {
   transition: all 0.5s ease;
 }
 .sidebar.open .logo-details .icon,
-.sidebar.open .logo-details .logo_name{
+.sidebar.open .logo-details .logo_name {
   opacity: 1;
 }
-.sidebar .logo-details #btn{
+.sidebar .logo-details #btn {
   position: absolute;
   top: 50%;
   right: 0;
@@ -67,10 +66,10 @@ body {
   cursor: pointer;
   transition: all 0.5s ease;
 }
-.sidebar.open .logo-details #btn{
+.sidebar.open .logo-details #btn {
   text-align: right;
 }
-.sidebar i{
+.sidebar i {
   color: #fff;
   height: 60px;
   min-width: 50px;
@@ -78,16 +77,16 @@ body {
   text-align: center;
   line-height: 60px;
 }
-.sidebar .nav-list{
+.sidebar .nav-list {
   margin-top: 20px;
   height: 100%;
 }
-.sidebar li{
+.sidebar li {
   position: relative;
   margin: 8px 0;
   list-style: none;
 }
-.sidebar li .tooltip{
+.sidebar li .tooltip {
   position: absolute;
   top: -20px;
   left: calc(100% + 15px);
@@ -102,19 +101,19 @@ body {
   pointer-events: none;
   transition: 0s;
 }
-.sidebar li:hover .tooltip{
+.sidebar li:hover .tooltip {
   opacity: 1;
   pointer-events: auto;
   transition: all 0.4s ease;
   top: 50%;
   transform: translateY(-50%);
 }
-.sidebar.open li .tooltip{
+.sidebar.open li .tooltip {
   display: none;
 }
-.sidebar input{
+.sidebar input {
   font-size: 15px;
-  color: #FFF;
+  color: #fff;
   font-weight: 400;
   outline: none;
   height: 50px;
@@ -125,28 +124,28 @@ body {
   transition: all 0.5s ease;
   background: #1d1b31;
 }
-.sidebar.open input{
+.sidebar.open input {
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
+.sidebar .bx-search {
   position: absolute;
   top: 50%;
   left: 0;
   transform: translateY(-50%);
   font-size: 22px;
   background: #1d1b31;
-  color: #FFF;
+  color: #fff;
 }
-.sidebar.open .bx-search:hover{
+.sidebar.open .bx-search:hover {
   background: #1d1b31;
-  color: #FFF;
+  color: #fff;
 }
-.sidebar .bx-search:hover{
-  background: #FFF;
+.sidebar .bx-search:hover {
+  background: #fff;
   color: #11101d;
 }
-.sidebar li a{
+.sidebar li a {
   display: flex;
   height: 100%;
   width: 100%;
@@ -154,17 +153,17 @@ body {
   align-items: center;
   text-decoration: none;
   transition: all 0.4s ease;
-  background: #11101D;
+  background: #11101d;
   margin-top: 15px;
 }
 .sidebar .active-page {
   background-color: #8b7d77;
 }
 
-.sidebar li a:hover{
+.sidebar li a:hover {
   background: #f6f6f6;
 }
-.sidebar li a .links_name{
+.sidebar li a .links_name {
   color: #f6f6f6;
   font-size: 15px;
   font-weight: 400;
@@ -173,27 +172,27 @@ body {
   pointer-events: none;
   transition: 0.4s;
 }
-.sidebar.open li a .links_name{
+.sidebar.open li a .links_name {
   opacity: 1;
   pointer-events: auto;
 }
 .sidebar li a:hover .links_name,
-.sidebar li a:hover i{
+.sidebar li a:hover i {
   transition: all 0.5s ease;
-  color: #11101D;
+  color: #11101d;
 }
-.sidebar li i{
+.sidebar li i {
   height: 50px;
   line-height: 50px;
   font-size: 20px;
   border-radius: 12px;
 }
 
-#logout{
+#logout {
   margin-top: 80px;
 }
 
-.home-section{
+.home-section {
   position: relative;
   background: #f6f6f6;
   min-height: 100vh;
@@ -204,91 +203,90 @@ body {
   z-index: 2;
 }
 
-.home-section .text{
+.home-section .text {
   display: inline-block;
   font-size: 25px;
   font-weight: 500;
   margin-left: 35px;
 }
 
-
-
-.search-container .input{
-	border: 0;
-	outline: none;
-	color: #8b7d77;
-  background-color: #C4C4C4;
+.search-container .input {
+  border: 0;
+  outline: none;
+  color: #8b7d77;
+  background-color: #c4c4c4;
 }
 
-input::placeholder { color: white; }
-
-.search_wrap{
-    margin-left: 50px;
-    display: inline-block;
-}
-
-.search_wrap .search_box{
-	position: relative;
-	width: 790px;
-	height: 55px;
-}
-
-.search_wrap .search_box .input{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	padding: 10px 20px;
-	border-radius: 3px;
-	font-size: 18px;
+input::placeholder {
   color: white;
 }
 
-.search_wrap .search_box .btn{
-	position: absolute;
-	top: 5px;
-	margin-right: 8px;
-	width: 53px;
-	height: 79%;
-	background: #fff;
-	z-index: 1;
-	cursor: pointer;
-    border-radius: 10px;
+.search_wrap {
+  margin-left: 50px;
+  display: inline-block;
 }
 
-.search_wrap .search_box .btn:hover{
-	background: #C7AABC;	
+.search_wrap .search_box {
+  position: relative;
+  width: 790px;
+  height: 55px;
 }
 
-.search_wrap .search_box .btn.btn_common .fas{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	color: #11101d;
-	font-size: 20px;
+.search_wrap .search_box .input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 10px 20px;
+  border-radius: 3px;
+  font-size: 18px;
+  color: white;
 }
 
-.search_wrap.search_wrap_1 .search_box .btn{
-	right: 0;
-    border-radius: 10px;
+.search_wrap .search_box .btn {
+  position: absolute;
+  top: 5px;
+  margin-right: 8px;
+  width: 53px;
+  height: 79%;
+  background: #fff;
+  z-index: 1;
+  cursor: pointer;
+  border-radius: 10px;
 }
 
-.search_wrap.search_wrap_1 .search_box .input{
-	padding-right: 80px;
-    border-radius: 13px;
+.search_wrap .search_box .btn:hover {
+  background: #c7aabc;
+}
+
+.search_wrap .search_box .btn.btn_common .fas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #11101d;
+  font-size: 20px;
+}
+
+.search_wrap.search_wrap_1 .search_box .btn {
+  right: 0;
+  border-radius: 10px;
+}
+
+.search_wrap.search_wrap_1 .search_box .input {
+  padding-right: 80px;
+  border-radius: 13px;
 }
 
 .top-container {
   display: flex;
   flex-direction: row;
   margin-left: 3%;
-
 }
 
 .time {
-  background-color: #C4C4C4;
+  background-color: #c4c4c4;
   height: 54px;
   margin-top: 2px;
   padding-top: 6px;
@@ -298,7 +296,7 @@ input::placeholder { color: white; }
   text-align: center;
 }
 .total-sales {
-  background-color: #C7AABC;
+  background-color: #c7aabc;
   margin-left: 49px;
   padding-left: 10px;
   padding-top: 15px;
@@ -309,4 +307,8 @@ input::placeholder { color: white; }
 .total {
   color: white;
   font-size: 18px;
+}
+
+#description {
+  text-transform: capitalize;
 }
