--- a/client/inventory/inventory_styles.css
+++ b/client/inventory/inventory_styles.css
@@ -1,51 +1,50 @@
 /* Google Font Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins" , sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 body {
-    background-color: #f6f6f6;
+  background-color: #f6f6f6;
 }
-.sidebar{
+.sidebar {
   position: fixed;
   left: 8px;
   top: 15px;
   height: 94%;
   width: 78px;
-  background: #513E5C;
+  background: #513e5c;
   padding: 6px 14px;
   z-index: 99;
   transition: all 0.5s ease;
   border-radius: 18px;
 }
 
-
 .sidebar .active-page {
   background-color: #8b7d77;
 }
 
-.sidebar.open{
+.sidebar.open {
   width: 220px;
 }
 
-.sidebar .logo-details{
+.sidebar .logo-details {
   height: 60px;
   display: flex;
   align-items: center;
   position: relative;
 }
-.sidebar .logo-details .icon{
+.sidebar .logo-details .icon {
   opacity: 0;
   transition: all 0.5s ease;
   height: 45px;
   margin-top: 5px;
   width: 45px;
 }
-.sidebar .logo-details .logo_name{
+.sidebar .logo-details .logo_name {
   color: #fff;
   font-size: 20px;
   font-weight: 600;
@@ -54,10 +53,10 @@ body {
   transition: all 0.5s ease;
 }
 .sidebar.open .logo-details .icon,
-.sidebar.open .logo-details .logo_name{
+.sidebar.open .logo-details .logo_name {
   opacity: 1;
 }
-.sidebar .logo-details #btn{
+.sidebar .logo-details #btn {
   position: absolute;
   top: 50%;
   right: 0;
@@ -69,10 +68,10 @@ body {
   cursor: pointer;
   transition: all 0.5s ease;
 }
-.sidebar.open .logo-details #btn{
+.sidebar.open .logo-details #btn {
   text-align: right;
 }
-.sidebar i{
+.sidebar i {
   color: #fff;
   height: 60px;
   min-width: 50px;
@@ -80,16 +79,16 @@ body {
   text-align: center;
   line-height: 60px;
 }
-.sidebar .nav-list{
+.sidebar .nav-list {
   margin-top: 20px;
   height: 100%;
 }
-.sidebar li{
+.sidebar li {
   position: relative;
   margin: 8px 0;
   list-style: none;
 }
-.sidebar li .tooltip{
+.sidebar li .tooltip {
   position: absolute;
   top: -20px;
   left: calc(100% + 15px);
@@ -104,19 +103,19 @@ body {
   pointer-events: none;
   transition: 0s;
 }
-.sidebar li:hover .tooltip{
+.sidebar li:hover .tooltip {
   opacity: 1;
   pointer-events: auto;
   transition: all 0.4s ease;
   top: 50%;
   transform: translateY(-50%);
 }
-.sidebar.open li .tooltip{
+.sidebar.open li .tooltip {
   display: none;
 }
-.sidebar input{
+.sidebar input {
   font-size: 15px;
-  color: #FFF;
+  color: #fff;
   font-weight: 400;
   outline: none;
   height: 50px;
@@ -127,28 +126,28 @@ body {
   transition: all 0.5s ease;
   background: #1d1b31;
 }
-.sidebar.open input{
+.sidebar.open input {
   padding: 0 20px 0 50px;
   width: 100%;
 }
-.sidebar .bx-search{
+.sidebar .bx-search {
   position: absolute;
   top: 50%;
   left: 0;
   transform: translateY(-50%);
   font-size: 22px;
   background: #1d1b31;
-  color: #FFF;
+  color: #fff;
 }
-.sidebar.open .bx-search:hover{
+.sidebar.open .bx-search:hover {
   background: #1d1b31;
-  color: #FFF;
+  color: #fff;
 }
-.sidebar .bx-search:hover{
-  background: #FFF;
+.sidebar .bx-search:hover {
+  background: #fff;
   color: #11101d;
 }
-.sidebar li a{
+.sidebar li a {
   display: flex;
   height: 100%;
   width: 100%;
@@ -156,13 +155,13 @@ body {
   align-items: center;
   text-decoration: none;
   transition: all 0.4s ease;
-  background: #11101D;
+  background: #11101d;
   margin-top: 15px;
 }
-.sidebar li a:hover{
+.sidebar li a:hover {
   background: #f6f6f6;
 }
-.sidebar li a .links_name{
+.sidebar li a .links_name {
   color: #f6f6f6;
   font-size: 15px;
   font-weight: 400;
@@ -171,23 +170,23 @@ body {
   pointer-events: none;
   transition: 0.4s;
 }
-.sidebar.open li a .links_name{
+.sidebar.open li a .links_name {
   opacity: 1;
   pointer-events: auto;
 }
 .sidebar li a:hover .links_name,
-.sidebar li a:hover i{
+.sidebar li a:hover i {
   transition: all 0.5s ease;
-  color: #11101D;
+  color: #11101d;
 }
-.sidebar li i{
+.sidebar li i {
   height: 50px;
   line-height: 50px;
   font-size: 20px;
   border-radius: 12px;
 }
 
-.home-section{
+.home-section {
   position: relative;
   background: #f6f6f6;
   margin-top: 30px;
@@ -201,24 +200,24 @@ body {
   flex-direction: row;
 }
 
-.home-section .text{
+.home-section .text {
   display: inline-block;
   font-size: 25px;
   font-weight: 500;
   margin-left: 35px;
 }
 
-.main-container{
+.main-container {
   display: flex;
   flex-flow: wrap row;
   margin-bottom: 40px;
 }
 
-.side-container{
+.side-container {
   margin-top: 60px;
 }
 
-.item-container{
+.item-container {
   margin-top: 15px;
   margin-left: 25px;
   display: flex;
@@ -226,44 +225,49 @@ body {
   height: 100%;
 }
 
-.upper-subcontainer{
+.upper-subcontainer {
+  display: flex;
+  width: 100%;
+}
+
+.lower-subcontainer {
   display: flex;
   flex-direction: row;
   margin-left: 10px;
 }
 
-.top-text{
+.top-text {
   font-size: 20px;
   font-weight: 700;
   margin-left: 25px;
-  background-color: #513E5C;
+  margin-bottom: 15px;
+  background-color: #513e5c;
   color: #fff;
-  width: 280px;
+  width: 590px;
   height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 12px;
-   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 .dropdown {
-    background-color: #e5e5e5;
-	  border: none;
-    border-radius: 20px;
-	  padding: 14px 15px;
-  	margin-left: 18px;
-    font-size: 17px;
-    padding-left: 15px;
-    outline: none;
-    width: 280px;
-    height: 50px;
-    color: #513E5C;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  background-color: #e5e5e5;
+  border: none;
+  border-radius: 20px;
+  padding: 14px 15px;
+  margin-left: 18px;
+  font-size: 17px;
+  padding-left: 15px;
+  outline: none;
+  width: 280px;
+  height: 50px;
+  color: #513e5c;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-
-.top-itemlist{
+.top-itemlist {
   background-color: #fff;
   list-style: none;
   border-radius: 15px;
@@ -275,16 +279,14 @@ body {
   justify-content: space-around;
   height: 80%;
   width: 300px;
- 
-  
 }
 
-.top-item{
+.top-item {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #c7aabc;
-  color: #513E5C;
+  color: #513e5c;
   border-radius: 10px;
   width: 280px;
   height: 110px;
@@ -292,19 +294,20 @@ body {
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
-.top-item:hover{
+.top-item:hover {
   color: #c7aabc;
-  background-color: #513E5C;
-  cursor:pointer;
+  background-color: #513e5c;
+  cursor: pointer;
 }
 
-.item-name{
+.item-name {
+  text-transform: capitalize;
   font-size: 16px;
   text-align: center;
   font-weight: 400;
 }
 
-.item-qty{
+.item-qty {
   border-top: 3px solid #fff;
   width: 101px;
   text-align: center;
@@ -333,7 +336,7 @@ body {
   background-color: #fff;
   border-radius: 15px;
   margin-left: 80px;
-  box-shadow: 0 0 5px #513E5C;
+  box-shadow: 0 0 5px #513e5c;
 }
 
 .sidebar .active-page {
