--- a/client/dashboard/dashboard_styles.css
+++ b/client/dashboard/dashboard_styles.css
@@ -200,19 +200,15 @@ body {
   z-index: 2;
   display: flex;
   flex-direction: row;
-  margin-top: 35px;
+  margin-top: 20px;
 }
 
 .main-container{
-  margin: 15px 0 0 15px;
+  margin: 0px 0 0 15px;
   width: 880px;
   height: 100vh;
   display: flex;
   flex-direction: column;
-}
-
-.first-row{
-  margin-bottom: 30px;
 }
 
 .title{
@@ -278,107 +274,57 @@ body {
   display: flex;
   flex-direction: row;
   width: 880px;
-  margin-top: 40px;
+  margin-top: 80px;
 }
 
-.inventory-container{
-  margin-right: 8px;
+.user-container{
+  margin-left: 6px;
 }
 
-.inventory-summary{
+.chart-txt {
+  margin-left: 13px;
+  color: #513e5c;
+  padding-top: 5px;
+  font-size: 18px;
+}
+
+.user-table{
+  height: 370px;
+  width: 650px;
   background-color: #fff;
-  list-style: none;
-  height: 200px;
-  width: 330px;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-  
+  border-radius: 15px;
+  margin-left: 20px;
+  box-shadow: 0 0 5px #513e5c;
 }
 
-.inv-info{
-  background-color: #c4c4c4;
-  color: #513E5C;
-  border-radius: 10px;
-  width: 300px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-}
-
-.inv-name{
-  margin-left: 10px;
-  width: 220px;
-  
-}
-
-.inv-number{
-  padding-left: 18px;
-  border-left: solid 3px #513E5C;
-  font-weight: 500;
-}
-
-.product-container{
+.canvas-graph{
   display: flex;
   flex-direction: row;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.purchase-container{
+margin-left: 18px;
+}
+
+.product-table{
+  height: 370px;
+  width: 650px;
   background-color: #fff;
+  border-radius: 15px;
+  margin-left: 20px;
+  box-shadow: 0 0 5px #513e5c;
 }
 
-.product-details{
-  list-style: none;
-  height: 200px;
-  width: 330px;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.prod-info{
-  background-color: #c4c4c4;
-  color: #513E5C;
-  border-radius: 10px;
-  width: 300px;
-  height: 50px;
-  display: flex;
-  
-  align-items: center;
-   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-}
-
-.prod-name{
-  margin-left: 10px;
-  width: 220px;
-  
-}
-
-.prod-number{
-  padding-left: 18px;
-  border-left: solid 3px #513E5C;
-  font-weight: 500;
-}
-
-.small-graph{
-  margin-top:47px;
-  background-color: #513E5C;
-  color: #fff;
-  border-radius: 10px;
-  width: 200px;
-  height: 190px;
-  display: flex;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-}
-
-.small-graph h5{
-  margin: 4px 0 0 10px;
+.product-table h4{
+  margin-left: 25px;
+  color: #1d1b31;
+  margin-top: 5px;
+  font-size: 15px;
 }
 
 .calendar{
-  margin: 80px 0 0 10px;
+  margin: 10px 0 0 10px;
 }
